--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -4,20 +4,66 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.tailwindcss.com"></script>
   <title>Document</title>
+
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+  </style>
 </head>
 <body>
-  <div 
-    style="
-      width: 100%;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin: 0;
-    "
-  >
-    <h1>Hello World!</h1>
+  <div class="w-screen h-screen bg-slate-700 flex flex-col items-center justify-center p-20">
+    <div class="w-full grid grid-cols-4 gap-4"> <!-- Input section -->
+      <div></div>
+      <div class="col-span-2 flex justify-center">
+        <form action="/create" method="post" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+          <div class="mb-4">
+            <label class="block text-gray-700 text-sm font-bold mb-2" for="first name">
+              Please input your firstname
+            </label>
+            <input 
+              class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" 
+              id="firstname" 
+              type="text" 
+              placeholder="Firstname"
+              name="firstName"
+              required
+            />
+          </div>
+          <div class="mb-6">
+            <label class="block text-gray-700 text-sm font-bold mb-2" for="last name">
+              Please input your lastname
+            </label>
+            <input 
+              class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" 
+              id="lastname" 
+              type="text" 
+              placeholder="Lastname"
+              name="lastName"
+              required
+            />
+          </div>
+          <span class="flex items-center space-x-3">
+            <%if (typeof error !== "undefined" && !error) { %>
+              <svg class="flex-shrink-0 w-5 h-5 text-green-500 dark:text-green-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
+              <span class="text-green-500"><%= message %></span>
+            <% } %>
+          </span>
+          <div class="flex items-center justify-between">
+            <button class="w-full bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
+              Proceed
+            </button>
+          </div>
+        </form>
+      </div>
+      <div></div>
+    </div>
+
+    <!-- END -->
   </div>
 </body>
 </html>
